--- a/configs/configurations.yaml
+++ b/configs/configurations.yaml
@@ -18,6 +18,9 @@ training_data:
   callbacks_path_csvlogger: "./data/results/"
   callbacks_path_tensorboard: "./data/results/"
   model_save_path: "./models/save/"
+  original_dataset_path: "./data/MNIST Dataset/"
+  new_dataset_path: "./data/MNIST_Manual_Dataset"
+  dataset_class_names: (0,1,2,3,4,5,6,7,8,9) 
 
 # Inference configuration
 inference:
